tests/rosetta/transpiler/OCaml/9-billion-names-of-god-the-integer.error
exit status 2
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/9-billion-names-of-god-the-integer.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: "9-billion-names-of-god-the-integer" is not a valid module name.
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/9-billion-names-of-god-the-integer.ml", line 19, characters 15-27:
19 |   __ret := !a; raise Return;
                    ^^^^^^^^^^^^
Warning 21 [nonreturning-statement]: this statement never returns (or has an unsound type.)
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/9-billion-names-of-god-the-integer.ml", line 39, characters 20-32:
39 |   __ret := !digits; raise Return;
                         ^^^^^^^^^^^^
Warning 21 [nonreturning-statement]: this statement never returns (or has an unsound type.)
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/9-billion-names-of-god-the-integer.ml", line 68, characters 27-39:
68 |   __ret := bigTrim (!res); raise Return;
                                ^^^^^^^^^^^^
Warning 21 [nonreturning-statement]: this statement never returns (or has an unsound type.)
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/9-billion-names-of-god-the-integer.ml", line 99, characters 27-39:
99 |   __ret := bigTrim (!res); raise Return;
                                ^^^^^^^^^^^^
Warning 21 [nonreturning-statement]: this statement never returns (or has an unsound type.)
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/9-billion-names-of-god-the-integer.ml", line 116, characters 15-27:
116 |   __ret := !s; raise Return;
                     ^^^^^^^^^^^^
Warning 21 [nonreturning-statement]: this statement never returns (or has an unsound type.)
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/9-billion-names-of-god-the-integer.ml", line 127, characters 15-27:
127 |   __ret := !a; raise Return;
                     ^^^^^^^^^^^^
Warning 21 [nonreturning-statement]: this statement never returns (or has an unsound type.)
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/9-billion-names-of-god-the-integer.ml", line 146, characters 22-30:
146 |   let val_ = List.nth List.nth !cache (!y - !x) minInt (!x) ((!y - !x)) in
                            ^^^^^^^^
Error: This expression has type 'a list -> int -> 'a
       but an expression was expected of type
         ('b -> 'c -> 'd -> 'e -> 'f) list
